--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     // Function to send data to the Power Automate flow
     async function sendDataToFlow(data) {
-      // Your Power Automate HTTP trigger URL
+      // Provided Power Automate HTTP trigger URL
       const flowUrl = "https://prod-103.westus.logic.azure.com:443/workflows/b86f09a26088493093722b98e7505c78/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=7UkMbtq0xWf7PhNtIuqYDDJv7O4Pjsxcl7AcYhzx3YU";
       
       try {
